// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`vue/Form > renders correctly - with active step 1`] = `
<form
  class="perseid-form"
  id="test"
>
  <div
    class="perseid-form__steps"
  >
    
    
    <div
      field="[object Object]"
      id="default-step"
    >
      {"step":{"path":"start","fields":[]},"activeStep":"end","engine":"&lt;Engine&gt;","setActiveStep":"&lt;Function&gt;","useSubscription":"&lt;Function&gt;"}
    </div>
    <div
      field="[object Object]"
      id="default-step"
    >
      {"step":{"path":"end","fields":[]},"activeStep":"end","engine":"&lt;Engine&gt;","setActiveStep":"&lt;Function&gt;","useSubscription":"&lt;Function&gt;"}
    </div>
    
    
    <!--v-if-->
  </div>
</form>
`;

exports[`vue/Form > renders correctly 1`] = `
<form
  class="perseid-form"
  id="test"
>
  <div
    class="perseid-form__steps"
  >
    
    
    <div
      class="perseid-form__step perseid-form__step----start--active"
      id="start"
    >
      <div
        class="perseid-form__step__fields"
      >
        <!--
      Key is composed of both step and field ids, in order to ensure each field is correctly reset
      when user changes his journey in previous steps.
    -->
        
        
      </div>
    </div>
    <div
      class="perseid-form__step perseid-form__step----end"
      id="end"
    >
      <div
        class="perseid-form__step__fields"
      >
        <!--
      Key is composed of both step and field ids, in order to ensure each field is correctly reset
      when user changes his journey in previous steps.
    -->
        
        
      </div>
    </div>
    
    
    <!--v-if-->
  </div>
</form>
`;
